@@ -92,5 +92,18 @@ class XML_vector_io(unittest.TestCase):
             self.assertEqual(x.size(), y.size())
             self.assertAlmostEqual(x.norm("l2"), y.norm("l2"))
 
+    def test_save_read_vector(self):
+        size = 512
+        x = Vector(size)
+        x[:] = 1.0
+
+        out_file = File("test_vector_xml.xml")
+        out_file << x
+
+        y = Vector()
+        out_file >> y
+        self.assertEqual(x.size(), y.size())
+        self.assertAlmostEqual((x - y).norm("l2"), 0.0)
+
 if __name__ == "__main__":
     unittest.main()
